[package]
name = "symbolic-diffs"
version = "0.4.2"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["num-complex"]

[dependencies]
num-traits = "0.2.12"
typenum = "1.12.0"
generic-array = "0.14.4"
num-complex = { version = "0.3.0" , optional = true }

